--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 53,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -110,7 +110,7 @@
           "output_type": "stream",
           "text": [
             "Q2: Which of the following techniques is used to handle missing numerical data?\n",
-            "Answer: Detecting outliers\n"
+            "Answer: Imputing with mean, median, or mode\n"
           ]
         }
       ],
@@ -128,7 +128,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[4]\n",
+        "    return options[2]\n",
         "\n",
         "print(f'Q2: Which of the following techniques is used to handle missing numerical data?\\nAnswer: {answer_q2()}')"
       ]
@@ -149,7 +149,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -163,7 +163,7 @@
           "output_type": "stream",
           "text": [
             "Q3: What does one-hot encoding do?\n",
-            "Answer: Detects and removes outliers from a dataset\n"
+            "Answer: Converts categorical data into binary columns, one for each category\n"
           ]
         }
       ],
@@ -181,7 +181,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[4]\n",
+        "    return options[3]\n",
         "\n",
         "print(f'Q3: What does one-hot encoding do?\\nAnswer: {answer_q3()}')"
       ]
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -216,7 +216,7 @@
           "output_type": "stream",
           "text": [
             "Q4: Which method can be used to detect outliers in a dataset?\n",
-            "Answer: Applying one-hot encoding\n"
+            "Answer: Box plot visualization\n"
           ]
         }
       ],
@@ -234,7 +234,7 @@
         "    }\n",
         "\n",
         "    # TODO: return the correct option number\n",
-        "    return options[3]\n",
+        "    return options[1]\n",
         "\n",
         "print(f'Q4: Which method can be used to detect outliers in a dataset?\\nAnswer: {answer_q4()}')"
       ]
@@ -886,7 +886,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Your answer here..."
+        "In this case, the age outliers should be capped instead of removed. Removing outliers can lead to a loss of valuable information, especially in a dataset with a limited number of samples. Capping the outliers ensures that the extreme values are brought within a reasonable range without discarding any data points, which helps in maintaining the integrity of the dataset and improving the model's performance."
       ]
     },
     {
